# openFB

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.en.md  README.md  README.ru.md  TESTING_COMPLETE.md  TESTING_EXAMPLES.md  TESTING_GUIDE.md  TESTS.md  TESTS_INDEX.md  TESTS_SUMMARY.md  allBlocks.md  direct_test.py  edge_test.py  final_test.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py  run_tests.py
.github/: copilot-instructions.md
.github/workflows/: build.yaml  release.yaml
.gitlab-ci-local/: expanded-gitlab-ci.yml
4diac_sys/washer_detector/: .project  washer_detector.sys
4diac_sys/washer_detector_py/: MANIFEST.MF  washer_detector.sys
4diac_sys/washer_detector_relay/: .project  MANIFEST.MF  distributed_example.sys  washer_detector.sys
communication/: client_thread.py
core/: configuration.py  fb.py  fb_interface.py  fb_resources.py  main.py  manager.py
data_model_fboot/: ua_manager.py  ua_method.py  ua_object.py  utils.py
deb-packaging/: Dockerfile.build
deb-packaging/scripts/: build-package.sh
docker/: Dockerfile  requirements.txt  start.sh
examples/Stream/: .project  Stream.sys
examples/dets/: .project  dets.sys
opc_ua/: base.py  peer.py
opc_ua/examples/: methods_example.py  workers_example.py
openfb/: __init__.py
openfb/communication/: client_thread.py  tcp_server.py
openfb/core/: fb.py  (+6 more)
resources/: monitoring.py
tests/: README.md  __init__.py  conftest.py  test_complex_scenario.py  test_utils_py.py
tools/: strip_fbt_sections.py
utils/: fixfile.py
(+1158 files in other folders)
